# MarketPlayerTestTask

./: CMakeLists.txt  README.md  build.sh
src/: App.cpp  App.h  CoordinateConverter.h  DoubleToByteTruncater.h  GaussianKernelCalculator.cpp  GaussianKernelCalculator.h  Image.cpp  Image.h  ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h  Kernel.h  MultithreadGaussianBlur.cpp  MultithreadGaussianBlur.h  MultithreadRGBToGrayscaleImageConverter.cpp  MultithreadRGBToGrayscaleImageConverter.h  main.cpp
